--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <style name="Base.Theme.ElegantButtons" parent="Theme.Material3.DynamicColors.DayNight.NoActionBar">
+    <style name="Base.Theme.ElegantButtons" parent="Theme.Material3.DayNight.NoActionBar">
+
     </style>
 
     <style name="AppTheme" parent="Base.Theme.ElegantButtons">
